fixed Navbar gap

--- a/assets/css/toneDef.css
+++ b/assets/css/toneDef.css
@@ -20,6 +20,7 @@
 
 .navbar-header {
     margin: 0;
+    margin-top: -33px;
 }
 
 .songHeader,
